Fixed layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -315,7 +315,7 @@ img {
     padding: 15px 25px;
     font-size: 22px;
     text-decoration: none;
-    margin: 20px;
+    margin: 10px;
     color: #fff;
     position: relative;
     display: inline-block;
@@ -349,7 +349,7 @@ img {
     }
 
     .header__container h2.first {
-        margin-top: -120px;
+        margin-top: -150px;
     }
 }
 
